# scotty-starter

./: .gitignore  Main.hs  Procfile  README.md  app.cabal  default.nix  scotty-starter.nix
Client/: CSS.hs
Controllers/: Home.hi  Home.hs
Static/: CSS.hi  CSS.hs
Views/: Home.hi  Home.hs  Utils.hi  Utils.hs
